--- a/src/components/shared/background/_background.scss
+++ b/src/components/shared/background/_background.scss
@@ -2,6 +2,10 @@
     position: relative;
     height: max-content;
 }
+.background-container {
+    width: 100vw !important;
+    overflow-x: hidden;
+}
 .main-background-1 {
     position: relative;
     width: 100vw;
